--- a/views/partials/sidenav.ejs
+++ b/views/partials/sidenav.ejs
@@ -41,6 +41,20 @@
                 </ul>
             </li>
             <li>
+                <a href="#"><i class="fa fa-edit "></i>Banners <span class="fa arrow"></span></a>
+                 <ul class="nav nav-second-level">
+                   
+                     <li>
+                        <a href="/add_banner">Add Banner </a>
+                    </li>
+                     <li>
+                        <a href="/banner">All Banners</a>
+                    </li>
+                     
+                   
+                </ul>
+            </li>
+            <li>
                 <a href="login/"><i class="fa fa-sign-in "></i>Login Page</a>
             </li>
         </ul>
