--- a/views/partials/virnav.ejs
+++ b/views/partials/virnav.ejs
@@ -40,6 +40,20 @@
                     </li>
                 </ul>
             </li>
+            <li>
+                <a href="#"><i class="fa fa-edit "></i>Banners <span class="fa arrow"></span></a>
+                 <ul class="nav nav-second-level">
+                   
+                     <li>
+                        <a href="/add_banner">Add Banner </a>
+                    </li>
+                     <li>
+                        <a href="/banner">All Banners</a>
+                    </li>
+                     
+                   
+                </ul>
+            </li>
             
         </ul>
     </div>
